--- a/classPracticals/22Crypt.ipynb
+++ b/classPracticals/22Crypt.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -162,16 +162,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input message to decodeZl anzr vf newha\n"
+      "Input message to decode:Hello World\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'My name is arjun'"
+       "'Uryyb Jbeyq'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -191,16 +191,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input message to EncodeMy name is arjun\n"
+      "Input message to Encode:Uryyb Jbeyq\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Zl anzr vf newha'"
+       "'Hello World'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,6 +211,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
